--- a/client/package.json
+++ b/client/package.json
@@ -2,12 +2,14 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001",
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@apollo/react-hooks": "^4.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "apollo-server-express": "^3.10.2",
     "bootstrap": "^4.4.1",
     "graphql": "^16.6.0",
     "jwt-decode": "^2.2.0",
